# sirpent-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROTOCOL-0.4-examples.md  PROTOCOL-0.4-sessions.md  PROTOCOL.md  README.md  index.html  protocol-0.2.json  protocol-json-0.1.txt  refactor-ideas.txt  search-index.js
backtrace/: struct.Backtrace.html  struct.BacktraceFrame.html  struct.BacktraceSymbol.html
comms/: index.html  sidebar-items.js
comms/client/: Disconnect.t.html  MpscClient.t.html  Transmit.t.html  Unsplit.t.html  enum.Disconnect.html  index.html  sidebar-items.js  struct.Client.html  struct.Receive.html  struct.ReceiveWithHardTimeout.html  struct.ReceiveWithSoftTimeout.html  struct.Transmit.html  struct.Unsplit.html  (+1 more)
env_logger/: fn.init.html  index.html  struct.LogBuilder.html  struct.Logger.html
error_chain/: index.html  struct.Backtrace.html  trait.ChainedError.html
examples/: dummy_client.rs  error_chain.rs  grid_trait_object.rs  msg.rs  random_cell_counting.rs  serde_tag_bug.rs  serde_tag_bug.rs.compiled.rs
futures_mpsc/: fn.channel.html  fn.unbounded.html  index.html  struct.Receiver.html  struct.SendError.html  struct.Sender.html  struct.UnboundedReceiver.html  struct.UnboundedSender.html
futures_spawn/: Spawned.t.html  index.html  sidebar-items.js  struct.NewThread.html  struct.SpawnHandle.html  struct.Spawned.html  trait.Spawn.html  trait.SpawnHelper.html
futures_threadpool/: index.html  sidebar-items.js  struct.Builder.html  struct.ThreadPool.html
kabuki/: ActorFn.t.html  ActorFuture.t.html  actor_fn.v.html  enum.ActorState.html  enum.CallError.html  fn.actor_fn.html  index.html  sidebar-items.js  struct.ActorCell.html  struct.ActorFn.html  struct.ActorFuture.html  struct.ActorRef.html  struct.Builder.html  trait.Actor.html
sirpent/: enum.ErrorKind.html  index.html  sidebar-items.js  struct.Error.html  struct.IoErrorString.html  trait.ResultExt.html  type.Result.html
sirpent-spec/: qlkzy-spec-messages-only.txt  qlkzy-spec-messages-pretty.txt  state-machines.txt
src/: client.rs  client_future.rs  clients.rs  collect_results.rs  commands.rs  direction.rs  engine.rs  errors.rs  game.rs  game_engine.rs  game_future.rs  game_state.rs  grid.rs  hex_grid.rs  hexagon_grid.rs  hexgrid.rs  lib.rs  main.rs  net.rs  player.rs  player_conn.rs  players.rs  protocol.rs  snake.rs  square_grid.rs  state.rs  timeout.rs  triangle_grid.rs  utils.rs  vector.rs
src/game/: mod.rs  (+2 more)
uuid/: enum.ParseError.html  struct.Uuid.html
(+552 files in other folders)
