[package]
name = "sirpent"
version = "0.1.1"
authors = ["Nathan van Doorn <nvd1234@gmail.com>", "Michael Mokrysz <hi@46b.it>"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
log = "0.3"
env_logger = "0.4"
ansi_term = "0.9"
uuid = { version = "0.4", features = ["v4", "serde"] }
rand = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
clippy = {version = "0.0.114", optional = true}
error-chain = "0.9"

[dev-dependencies]
quickcheck = "0.2"

[features]
default = ["hexagon"]
square = []
hexagon = []
triangle = []
dev = ["clippy"]

[[bin]]
name = "sirpent"
doc = false

[replace]
"serde:0.9.8" = { git = "https://github.com/serde-rs/serde", rev = "8e5f472e27dc2c5679e6e0f507d37e6b80c09edd" }
