[package]
name = "sirpent"
version = "0.1.1"
authors = ["Nathan van Doorn <nvd1234@gmail.com>", "Michael Mokrysz <hi@46b.it>"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-timer = { git = "https://github.com/sirpent-team/tokio-timer", branch = "traits" }
tokio-io = "0.1"
bytes = "0.4"
log = "0.3"
env_logger = "0.4"
ansi_term = "0.9"
uuid = { version = "0.4", features = ["v4", "serde"] }
rand = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
clippy = {version = "*", optional = true}
error-chain = "0.9"
comms = { git = "https://github.com/sirpent-team/comms", branch = "develop" }

[dev-dependencies]
quickcheck = "0.2"

[replace]
"futures:0.1.11" = { git = "https://github.com/sirpent-team/futures-rs", branch = "master" }

[features]
default = ["hexagon"]
square = []
hexagon = []
triangle = []
dev = ["clippy"]

[[bin]]
name = "sirpent"
doc = false
