[package]
name = "sirpent"
version = "0.1.1"
authors = ["Nathan van Doorn <nvd1234@gmail.com>", "Michael Mokrysz <hi@46b.it>"]

[dependencies]
futures = "0.1"
tokio-timer = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
bytes = "0.4"
log = "0.3"
env_logger = "0.4"
ansi_term = "0.9"
uuid = { version = "0.4", features = ["v4", "serde"] }
rand = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
clippy = {version = "*", optional = true}
error-chain = "0.9"
comms = "0.1.4"
kabuki = { git = "https://github.com/carllerche/kabuki", rev = "4cc9aa77b7a59890b8cbfd276a067be015ed54f7" }

[dev-dependencies]
quickcheck = "0.2"

[features]
default = ["hexagon"]
square = []
hexagon = []
triangle = []
dev = ["clippy"]

[[bin]]
name = "sirpent"
doc = false
